--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chaingraph-ts": "^0.2.1",
     "dotenv": "^16.3.1",
     "mainnet-js": "^2.5.0",
     "tsx": "^4.19.1"
